--- a/index.html
+++ b/index.html
@@ -4,9 +4,443 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business promotion</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap:wght@500&family=Inter:opsz,wght@14..32,100..900&family=Montserrat:wght@100..900&family=Poppins:wght@400;500;600;700;800&family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
-    <header>
+    <header class="header">
+      <div class="container header-container">
+        <a href="./index.html" class="logo"
+          ><img
+            src="images/logo.svg"
+            alt="logo"
+            width="40"
+            height="36"
+          />Product</a
+        >
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link current" href="./index.html">Product</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./pricing.html">Pricing</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./customers.html">Customers</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">Resources</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-btn-list">
+          <li class="header-btn-item">
+            <button class="header-btn" type="button">Sign In</button>
+          </li>
+          <li class="header-btn-item">
+            <button class="header-btn" type="button">Sign Up</button>
+          </li>
+        </ul>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="container hero-container">
+          <div>
+            <h1 class="hero-title">Work at the speed of thought</h1>
+            <p class="hero-text">
+              Tools, tutorials, design and innovation experts, all in one place!
+              The most intuitive way to imagine your next user experience.
+            </p>
+            <ul class="hero-btn-list">
+              <li>
+                <button class="hero-btn-start" type="button">
+                  Get started
+                </button>
+              </li>
+              <li>
+                <button class="hero-btn-video" type="button">
+                  Watch the Video
+                </button>
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/hero-img.svg"
+            alt="hero-img"
+            width="610"
+            height="555"
+          />
+        </div>
+      </section>
+
+      <section class="products">
+        <div class="container">
+          <h2 class="products-title">Product was Built Specifically for You</h2>
+          <ul class="products-list">
+            <li class="products-item">
+              <img
+                class="products-icon"
+                src="./images/icon-1.svg"
+                alt="icon-1"
+                width="54"
+                height="54"
+              />
+              <h3 class="products-title-text">First click tests</h3>
+              <p class="products-text">
+                While most people enjoy casino gambling,
+              </p>
+            </li>
+            <li class="products-item">
+              <img
+                class="products-icon"
+                src="./images/icon-2.svg"
+                alt="icon-2"
+                width="54"
+                height="54"
+              />
+              <h3 class="products-title-text">Design surveys</h3>
+              <p class="products-text">
+                Sports betting, lottery and bingo playing for the fun
+              </p>
+            </li>
+            <li class="products-item">
+              <img
+                class="products-icon"
+                src="./images/icon-3.svg"
+                alt="icon-3"
+                width="54"
+                height="54"
+              />
+              <h3 class="products-title-text">Preference tests</h3>
+              <p class="products-text">
+                The Myspace page defines the individual.
+              </p>
+            </li>
+            <li class="products-item">
+              <img
+                class="products-icon"
+                src="./images/icon-4.svg"
+                alt="icon-4"
+                width="54"
+                height="54"
+              />
+              <h3 class="products-title-text">Five second tests</h3>
+              <p class="products-text">
+                Personal choices and the overall personality of the person.
+              </p>
+            </li>
+          </ul>
+          <button class="products-btn" type="button">sign up now</button>
+        </div>
+      </section>
+
+      <section>
+        <p>Effortless Validation for</p>
+        <h2>Management</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <ul>
+          <li>
+            <h3>Accessory makers</h3>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+          <li>
+            <h3>Alterationists</h3>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+        <img
+          src="./images/management-img.svg"
+          alt="management"
+          width="540"
+          height="500"
+        />
+      </section>
+    </main>
+
+    <section>
+      <img
+        src="./images/customer-support/support-img.svg"
+        alt="customer-support"
+        width="540"
+        height="500"
+      />
+      <p>Easier decision making for</p>
+      <h2>Customer Support</h2>
+      <p>
+        The Myspace page defines the individual, his or her characteristics,
+        traits, personal choices and the overall personality of the person.
+      </p>
+      <ul>
+        <li>
+          <img
+            src="./images/customer-support/icon-orange.svg"
+            alt="icon-orange"
+            width="35"
+            height="35"
+          />
+          <p>Never worry about overpaying for your energy again.</p>
+        </li>
+        <li>
+          <img
+            src="./images/customer-support/icon-red.svg"
+            alt="icon-red"
+            width="35"
+            height="35"
+          />
+          <p>
+            We will only switch you to energy companies that we trust and will
+            treat you right
+          </p>
+        </li>
+        <li>
+          <img
+            src="./images/customer-support/icon-blue.svg"
+            alt="icon-blue"
+            width="35"
+            height="35"
+          />
+          <p>We track the markets daily and know where the savings are.</p>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <p>Optimisation for</p>
+      <h2>Collaborative</h2>
+      <p>
+        Few would argue that, despite the advancements of feminism over the past
+        three decades, women still face a double standard when it comes to their
+        behavior.
+      </p>
+      <ul>
+        <li>
+          <h3>Accessory makers</h3>
+          <p>
+            While most people enjoy casino gambling, sports betting, lottery and
+            bingo playing for the fun
+          </p>
+        </li>
+        <li>
+          <h3>Alterationists</h3>
+          <p>
+            If you are looking for a new way to promote your business that won’t
+            cost you more money,
+          </p>
+        </li>
+      </ul>
+      <img
+        src="./images/collaboration-img.svg"
+        alt="collaboration"
+        width="540"
+        height="500"
+      />
+    </section>
+
+    <section>
+      <h2>Quick & Easy Process</h2>
+      <p>
+        Do you require some help for your project: Conception workshop,
+        prototyping, marketing strategy, landing page, Ux/UI?
+      </p>
+      <ul>
+        <li>
+          <img src="./images/av1.png" alt="av1" width="98" height="98" />
+          <p>I can take care of your pitch</p>
+        </li>
+        <li>
+          <img src="./images/av2.png" alt="av2" width="98" height="98" />
+          <p>I can prototype your app</p>
+        </li>
+        <li>
+          <img src="./images/av3.png" alt="av3" width="98" height="98" />
+          <p>I can take care of your pitch</p>
+        </li>
+        <li>
+          <img src="./images/av4.png" alt="av4" width="98" height="98" />
+          <p>I can help marketing strategy</p>
+        </li>
+      </ul>
+      <button type="button">Contact our expert</button>
+    </section>
+
+    <section>
+      <h2>Contents Strategies</h2>
+      <p>
+        We focus on ergonomics and meeting you where you work. It's only a
+        keystroke away.
+      </p>
+      <ul>
+        <li>
+          <img
+            src="./images/content-strategies/photo1.jpg"
+            alt="content-one"
+            width="350"
+            height="185"
+          />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <p>Increasing Prosperity With Positive Thinking</p>
+        </li>
+        <li>
+          <img
+            src="./images/content-strategies/photo2.jpg"
+            alt="content-two"
+            width="350"
+            height="185"
+          />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <p>Motivation Is The First Step To Success</p>
+        </li>
+        <li>
+          <img
+            src="./images/content-strategies/photo3.jpg"
+            alt="content-three"
+            width="350"
+            height="185"
+          />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <p>Success Steps For Your Personal Or Business</p>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Price Table</h2>
+      <p>We offer competitive price</p>
+      <ul>
+        <li>
+          <h3>Free</h3>
+          <p>Brief price description</p>
+          <h4>0 $ Per / month</h4>
+          <ul>
+            <li>
+              <p>Only 2 Operators</p>
+            </li>
+            <li>
+              <p>Notifications</p>
+            </li>
+            <li>
+              <p>Landing Pages</p>
+            </li>
+          </ul>
+          <button type="button">Order Now</button>
+        </li>
+        <li>
+          <h3>Standard</h3>
+          <p>Brief price description</p>
+          <h4>5 $ Per / month</h4>
+          <ul>
+            <li>
+              <p>5+ Operators</p>
+            </li>
+            <li>
+              <p>Notifications</p>
+            </li>
+            <li>
+              <p>Landing Pages</p>
+            </li>
+          </ul>
+          <button type="button">Order Now</button>
+        </li>
+        <li>
+          <h3>Premium</h3>
+          <p>Brief price description</p>
+          <h4>10 $ Per / month</h4>
+          <ul>
+            <li><p>10+ Operators</p></li>
+            <li><p>Notifications</p></li>
+            <li>
+              <p>Landing Pages</p>
+            </li>
+          </ul>
+          <button type="button">Order Now</button>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>What Clients Say</h2>
+      <p>
+        Problems trying to resolve the conflict between the two major realms of
+        Classical physics: Newtonian mechanics
+      </p>
+      <ul>
+        <li>
+          <img src="./images/Group 204.png" alt="" width="106" height="18" />
+          <p>
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+          <img
+            src="./images/clients/client1.png"
+            alt="clien1"
+            width="50"
+            height="50"
+          /><a href="">Wahid Ari</a>
+          <h3>Designer</h3>
+        </li>
+        <li>
+          <img src="./images/Group 204.png" alt="" width="106" height="18" />
+          <p>
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+          <img
+            src="./images/clients/client2.png"
+            alt="client2"
+            width="50"
+            height="50"
+          /><a href="">Wahid Ari</a>
+          <h3>Designer</h3>
+        </li>
+        <li>
+          <img src="./images/Group 204.png" alt="" width="106" height="18" />
+          <p>
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+          <img
+            src="./images/clients/client3.png"
+            alt="client3"
+            width="50"
+            height="50"
+          /><a href="">Wahid Ari</a>
+          <h3>Designer</h3>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Join 100 Compannies who boost their business with Product</h2>
+      <button type="button">Get This</button>
+      <img src="./images/graphics.png" alt="" width="351" height="331" />
+    </section>
+
+    <footer>
       <a href="./index.html"
         ><img
           src="images/logo.svg"
@@ -15,41 +449,37 @@
           height="36"
         />Product</a
       >
-
       <nav>
         <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href="">Resources</a></li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/footer/insta.png"
+                alt="instagram"
+                width="40"
+                height="40"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/footer/fb.png"
+                alt="facebook"
+                width="40"
+                height="40"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/footer/twit.png"
+                alt="twitter"
+                width="40"
+                height="40"
+            /></a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
-      </ul>
-    </header>
-
-    <main>
-      <section>
-        <h1>Work at the speed of thought</h1>
-        <p>
-          Tools, tutorials, design and innovation experts, all in one place! The
-          most intuitive way to imagine your next user experience.
-        </p>
-        <ul>
-          <li><button type="button">Get started</button></li>
-          <li><button type="button">Watch the Video</button></li>
-        </ul>
-        <img
-          src="./images/hero-img.svg"
-          alt="hero-img"
-          width="610"
-          height="555"
-        />
-      </section>
-    </main>
-
-    <footer></footer>
+    </footer>
   </body>
 </html>
