--- a/index.html
+++ b/index.html
@@ -261,32 +261,61 @@
       />
     </section>
 
-    <section>
-      <h2>Quick & Easy Process</h2>
-      <p>
-        Do you require some help for your project: Conception workshop,
-        prototyping, marketing strategy, landing page, Ux/UI?
-      </p>
-      <ul>
-        <li>
-          <img src="./images/av1.png" alt="av1" width="98" height="98" />
-          <p>I can take care of your pitch</p>
-        </li>
-        <li>
-          <img src="./images/av2.png" alt="av2" width="98" height="98" />
-          <p>I can prototype your app</p>
-        </li>
-        <li>
-          <img src="./images/av3.png" alt="av3" width="98" height="98" />
-          <p>I can take care of your pitch</p>
-        </li>
-        <li>
-          <img src="./images/av4.png" alt="av4" width="98" height="98" />
-          <p>I can help marketing strategy</p>
-        </li>
-      </ul>
-      <button type="button">Contact our expert</button>
+    <!-- region Quick Easy -->
+    <section class="q-section">
+      <div class="q-container">
+        <h2 class="q-title">Quick & Easy Process</h2>
+        <p class="q-text">
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <ul class="q-list">
+          <li class="q-item">
+            <img
+              class="q-photo"
+              src="./images/av1.png"
+              alt="av1"
+              width="98"
+              height="98"
+            />
+            <p class="q-item-text">I can take care of your pitch</p>
+          </li>
+          <li class="q-item">
+            <img
+              class="q-photo"
+              src="./images/av2.png"
+              alt="av2"
+              width="98"
+              height="98"
+            />
+            <p class="q-item-text">I can prototype your app</p>
+          </li>
+          <li class="q-item">
+            <img
+              class="q-photo"
+              src="./images/av3.png"
+              alt="av3"
+              width="98"
+              height="98"
+            />
+            <p class="q-item-text">I can take care of your pitch</p>
+          </li>
+          <li class="q-item">
+            <img
+              class="q-photo"
+              src="./images/av4.png"
+              alt="av4"
+              width="98"
+              height="98"
+            />
+            <p class="q-item-text">I can help marketing strategy</p>
+          </li>
+        </ul>
+        <button class="q-button" type="button">Contact our expert</button>
+      </div>
     </section>
+
+    <!-- #endregion Quick Easy -->
 
     <section>
       <h2>Contents Strategies</h2>
